--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>tmss toolkit</title>
     </head>
     <body>
+        <canvas id="preview"></canvas>
         <canvas id="world"></canvas>
         <!--
 file:///Users/phi/Documents/work/tmlib.js/tmss-toolkit/index.html
@@ -15,5 +16,7 @@ file:///Users/phi/Documents/work/tmlib.js/tmss-toolkit/index.html
     </body>
     <script src="http://rawgithub.com/phi-jp/tmlib.js/develop/build/tmlib.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
+    <script src="scripts/spritesheet.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/preview.js"></script>
 </html>
